# gesture_controlled_robot_py

./: __init__.py  car.sdf  gitignore  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
config/: arm_config.yaml
gesture_controlled_robot_py/: gesture_listener_node.py  gitignore  movt_mapping.py  movt_pub_node.py  movt_sub_node.py  object_avoidance.py  package.xml  readme.txt  trajectory_publisher.py  trajectory_subscriber.py
gesture_controlled_robot_py/gesture_controlled_robot_py/: movt_mapping.py  movt_pub_node.py  trajectory_publisher.py  trajectory_subscriber.py
gesture_controlled_robot_py/gesture_controlled_robot_py/hand_gesture_recognition_mediapipe/: keypoint_classification.ipynb  keypoint_classification_EN.ipynb
gesture_controlled_robot_py/hand_gesture_recognition_mediapipe/: __init__.py  app.py  keypoint_classification_EN.ipynb
gesture_controlled_robot_py/models/: car.sdf  crap.sdf
install/: local_setup.sh  setup.sh
install/gesture_controlled_robot_py/share/gesture_controlled_robot_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: gazebo.launch.py  rsp.launch.py  rviz.launch.py
log/: latest_build
models/arm/: model.config  standalone_arm.urdf.urdf
models/mobile_base/: mobile_base.urdf.urdf  model.config
models/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  depth_camera.xacro  mobile_base.urdf.urdf  mobile_base.urdf.xacro  mobile_base.xacro  my_robot.urdf.urdf
three_joint_angles/: CMakeLists.txt  package.xml
three_joint_angles/msg/: ThreeJointAngles.msg
(+25 files in other folders)
